FIX: Plansoft 700: scrollbar issues

--- a/app/styles/overwrites.less
+++ b/app/styles/overwrites.less
@@ -71,7 +71,7 @@
 
     .wtHolder {
         // height: @view-height;
-        overflow-y: hidden;
+        // overflow-y: hidden;
     }
     
     // .wtSpreader {
